# lab-env

./: README.md  blinnPhong.shader  screen.shader  simple.shader  test.shader
engine/: CMakeLists.txt
engine/math/: CMakeLists.txt  ivec2.h  ivec3.h  mat4.h  math.cc  math.h  vec2.h  vec3.h  vec4.h
engine/render/: CMakeLists.txt  meshResource.h  textureResource.h  window.h
projects/assignment1/: CMakeLists.txt  README.md  mat4.h
projects/assignment2/: CMakeLists.txt
projects/assignment2/code/: main.cc  meshResource.h
projects/assignment3/: CMakeLists.txt
projects/assignment3/code/: main.cc  textureResource.h
projects/assignment4/: CMakeLists.txt
projects/assignment4/code/: cameraObject.h  graphicsNode.h  main.cc  meshResource.h
projects/assignment5/: CMakeLists.txt
projects/assignment5/code/: cameraObject.h  graphicsNode.h  main.cc  meshResource.h  textureResource.h
projects/assignment6/: CMakeLists.txt
projects/assignment6/code/: cameraObject.h  main.cc  meshResource.h  rendererObject.h  textureResource.h  vertex.h
projects/graphicsNodeTest/: CMakeLists.txt
projects/graphicsNodeTest/code/: cameraObject.h  graphicsNode.h  main.cc  shaderObject.h
projects/mathTest/: CMakeLists.txt  main.cc  mat4.h  util.h  vec3.h  vec4.h
projects/math_test/: CMakeLists.txt
projects/math_test/code/: main.cc  mat4.h  vec3.h  vec4.h
projects/meshTest/: CMakeLists.txt
projects/meshTest/code/: exampleapp.cc  exampleapp.h  main.cc  meshResource.h
projects/test/: CMakeLists.txt
projects/test/code/: cameraObject.h  lightPoint.h  main.cc  meshResource.h  rendererObject.h  shaderObject.h
projects/texturesAndCameraTest/: CMakeLists.txt
projects/texturesAndCameraTest/code/: main.cc  meshResource.h  textureResource.h
